--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
 
     "declaration": true,
-    "declarationDir": "dist/types"
-  }
+    "declarationDir": "dist/types",
+    "outDir": "./dist"
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
