--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "author": "Артем Дядюша",
   "license": "ISC",
-  "description": "",
+  "description": "React hook for easy access to Page Visibility API. For learning purposes only!",
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.3",
@@ -24,7 +24,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "react": "^18.3.1"
+    "react": ">=16.8.0"
   },
   "files": [
     "dist"
